Fix searchbar icon alignment on chrome

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1617,6 +1617,8 @@ p {
 
 .searchbar-button {
   display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   padding: 5px 10px;
   background-color: transparent;
